# summarize-budget

./: .gitignore  README.md  contas.py  main.py  pyproject.toml
package/: __init__.py  constants.py  funcger.py  messages.py  parser.py
